--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icon": "^1.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.4"
